# EverydayTools

./: CMakeLists.txt  README.md  make_coverage_report.py
Utility/VisualStudio/: ArrayView.natvis
include/EverydayTools/: Bitset.h  Delegate.h  Delegate.hpp  EnumFlag.h  FrameRateCounter.h  FrameRateCounter.hpp  GUID.h  GUID.hpp  GUID_fmtlib.hpp  Observable.h  Observable.hpp  Size.h  Size.hpp  TypeHasMethod.h  UnusedVar.hpp
include/EverydayTools/Algorithm/: Clamp.h  Clamp.hpp  Compare.h  Compare.hpp
include/EverydayTools/Algorithm/Sort/: BubbleSort.hpp  InsertionSort.h  InsertionSort.hpp
include/EverydayTools/Array/: ArrayView.h  ArrayView.hpp  ArrayViewVector.h  ArrayViewVector.hpp  StringView.h  StringView.hpp
include/EverydayTools/Bitset/: BitIterator.hpp  Bitset.hpp  BitsetAdapter.hpp  BitsetArrayAdapter.hpp  BitsetUtilities.h  BitsetUtilities.hpp  DynamicBitset.hpp  EnumBitset.hpp  FixedBitset.hpp
include/EverydayTools/Concepts/: Callable.hpp
include/EverydayTools/Constexpr/: HexToDec.h  HexToDec.hpp  ToLower.hpp
include/EverydayTools/Exception/: CallAndRethrow.h  CallAndRethrow.hpp  CheckedCast.h  CheckedCast.hpp  PrintException.h  PrintException.hpp  ThrowIfFailed.h  ThrowIfFailed.hpp
include/EverydayTools/Functional/: CallForEachArg.hpp  Wrap.hpp
include/EverydayTools/Geom/: LineMatrixView.h  LineMatrixView.hpp  Matrix.h  Matrix.hpp  MatrixView.h  MatrixView.hpp  Traits.h  Traits.hpp  Vector.h  Vector.hpp
include/EverydayTools/Geom/Details/: EmptyBases.h  FwdDecl.hpp  ImplementCastThis.h  ImplementCastThis.hpp  IsNdVector.h  MatrixView.h
include/EverydayTools/Geom/Details/Mixins/: Cast.h  Cast.hpp  Common.h  Common.hpp  Data.h  Data.hpp  DataAccess.h  DataView.h  DataView.hpp  LineDataView.h  LineDataView.hpp  MatrixMultiplication.h  MatrixMultiplication.hpp  NotVectorMethods.h  NotVectorMethods.hpp  SquareMatrix.h  SquareMatrix.hpp  Vector3.h  Vector3.hpp  VectorDataAccess.hpp  VectorMethods.h  VectorMethods.hpp  VectorRotation.h  VectorRotation.hpp  vectordataaccess.h
include/EverydayTools/Math/: Clamp.h  Constants.hpp  DegToRad.hpp  Equals.h  FloatRange.hpp  IntRange.hpp  Math.hpp  Matrix.hpp  SurfacePoints.hpp  constants.hpp  deg_to_rad.hpp  float_range.hpp  math.hpp  matrix.hpp
include/EverydayTools/Pointer/: IntrusivePtr.h  IntrusivePtr.hpp
include/EverydayTools/Preprocessor/: EmptyBases.h  EmptyBases.hpp  ExpotImport.hpp  Stringify.hpp
include/EverydayTools/Ranges/: ArrayIndices2d.hpp
include/EverydayTools/Reflection/: ForwardDeclaration.h  FwdDecl.h  GetTypeFlags.h  ITypeInfo.h  ITypeInfo.hpp  MakeTypeInfo.h  PrimitiveReflection.h  Reflection.h  Reflector.h  TypeFlagUtils.h  TypeFlags.h  TypeInfo.h  TypeInfo.hpp  TypeInfoContainer.h  TypeIsReflected.h  TypeOperators.h
include/EverydayTools/Reflection/Categories/: ClassTypeInfo.h  CommonOperators.h  CommonTypeInfo.h  EnumerationTypeInfo.h  FloatingPointTypeInfo.h  IntegralTypeInfo.h  NumberTypeInfo.h  TypeFlagTraits.h  TypeTraitMap.h
include/EverydayTools/Reflection/Category/: ClassTypeInfo.h  Common.h  CommonTypeInfo.h  EnumerationTypeInfo.h  FloatingPointTypeInfo.h  Fundamental.h  IntegralTypeInfo.h  StringTypeInfo.h
include/EverydayTools/Reflection/Detail/: FwdDecl.h  MakeTypeOperators.h  ReflectType.h  ReflectType.hpp  TypeInfoContainer.h  TypeInfoContainer.hpp
include/EverydayTools/Reflection/Detail/ReflectTypeInterface/: ClassReflectTypeInterface.h  ClassReflectTypeInterface.hpp  CommonReflectTypeInterface.h  CommonReflectTypeInterface.hpp  EnumerationReflectTypeInterface.h  EnumerationReflectTypeInterface.hpp  NumberReflectTypeInterface.h  NumberReflectTypeInterface.hpp
include/EverydayTools/Reflection/Detail/TypeTraits/: ClassTypeTraits.h  ClassTypeTraits.hpp  CommonTypeTraits.h  CommonTypeTraits.hpp  EnumerationTypeTraits.h  EnumerationTypeTraits.hpp  NumberTypeTraits.h  NumberTypeTraits.hpp  TypeFlagTraits.h  (+1 more)
include/EverydayTools/Reflection/Operators/: CommonOperators.h  MakeCommonOperators.h  StringOperators.h  TypeOperators.h
include/EverydayTools/Reflection/Primitive/: Float.h  Integer.h
include/EverydayTools/Reflection/SpecificTypeInfo/: ClassTypeInfo.h  CommonTypeInfo.h  CommonTypeInfo.hpp  EnumerationTypeInfo.h  EnumerationTypeInfo.hpp  NumberTypeInfo.hpp
include/EverydayTools/Reflection/Template/: FilterPredicates.h  MapFuctors.h
include/EverydayTools/Template/: AllTypesMatchCondition.hpp  AnyTypeMatchCondition.hpp  ApplyIf.hpp  FwdDecl.hpp  IsSpecialization.h  IsSpecialization.hpp  Overload.hpp  PureSameTypes.h  PureSameTypes.hpp  Signature.hpp  StringLiteral.h  StringLiteral.hpp  TaggedIdentifier.hpp  TaggedTypeId.hpp  TypeHasMethod.hpp  TypesList.h  TypesList.hpp  ValuesList.h  ValuesList.hpp  WorstQualifiers.h  WorstQualifiers.hpp  WorstReference.h  WorstReference.hpp  is_specialization.h
include/EverydayTools/Time/: MeasureTime.hpp
include/Pointer/: IntrusivePtr.h
tests/: CMakeLists.txt  TestTools.hpp
tests/Algorithm/: Algorithm.cpp  Clamp.cpp
tests/Algorithm/Sort/: BubbleSort.cpp
tests/Array/ArrayView/: CastAndConversion.cpp  Constructors.cpp  Iteration.cpp  StringView.cpp
tests/Bitset/: Bitset.cpp
tests/GUID/: GUID.cpp
tests/Geom/Matrix/: Inverse.cpp  Matrix.cpp  Matrix.h  Matrix.hpp
tests/Math/: math_test.cpp  matrix_test.cpp
tests/Template/: AllTypesMatchCondition.cpp  AnyTypeMatchCondition.cpp  ApplyIf.cpp  IsSpecialization.cpp  PureSameTypes.cpp  Signature.cpp  TypeHasMethod.cpp  TypesList.cpp  ValuesList.cpp  WorstQualifiers.cpp  WorstReference.cpp
(+3 files in other folders)
